// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 djxIfL"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 irBGFH"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 bDoovP"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 irBGFH"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 irBGFH"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 gYlMEj"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="text-input__StyledInput-sc-11wej6v-1 ccTEDj"
  disabled={false}
  name="text"
/>
`;
